--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "06-webserver",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "rami santi",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
